# utrrs

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  db.sqlite3  manage.py  requirements.txt  setup.cfg  setup.py
src/: manage.py
src/utrrs/: asgi.py  urls.py  views.py  wsgi.py
src/utrrs/settings/: base.py  development.py  production.py
src/utrrsApp/: admin.py  views.py
src/utrrsApp/templates/utrrsApp/: index.html
src/utrrsApp/templates/utrrsApp/utrrs_website/: about.html  checkfont.html  home.html
utrrs/: settings.py  urls.py  wsgi.py
utrrsApp/: apps.py  models.py  urls.py  views.py
utrrsApp/migrations/: 0001_initial.py
utrrsApp/static/bootstrap/css/: jquery.dataTables.css  mystyle.css  mystyle_old.css  test.css
utrrsApp/static/bootstrap/js/: mystyle.js
utrrsApp/static/lang/as_IN/font/: assamese-report.csv
utrrsApp/static/lang/de_DE/font/: german-report.csv
utrrsApp/templates/: about.html  as_codepoint.html  as_gpos.html  as_gsub.html  assamese.html  bengali.html  bn_codepoint.html  bn_gpos.html  bn_gsub.html  check_font.html  de_codepoint.html  de_gpos.html  de_gsub.html  german.html  gu_codepoint.html  gu_gpos.html  gu_gsub.html  gujarati.html  hi_codepoint.html  hi_gpos.html  hi_gsub.html  hindi.html  history.html  home.html  ja_codepoint.html  ja_gpos.html  ja_gsub.html  japanese.html  kannada.html  kn_codepoint.html  kn_gpos.html  kn_gsub.html  mai_codepoint.html  mai_gpos.html  mai_gsub.html  maithili.html  malayalam.html  marathi.html  master.html  master_old.html  (+25 more)
utrrsApp/templates/utrrsApp/: home.html  master.html  temp_main.html
(+272 files in other folders)
