[metadata]
name = utrrs
version = 0.2
description = The Unicode Text Rendering Reference System (UTRRS).
long_description = file: README.md
url = http://fuelproject.org/utrrs
author = Vishal Vijayraghavan
author_email = vishalvvr@fedoraproject.org
license = GPLv3 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0.4
    Intended Audience :: Developers
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    Django==3.0.4
